fix: Alter colors for better contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
     min-height: 100%;
 }
 #footer {
-    background-color: #444;
-    color: #aaa;
+    background-color: #2b2b2b;
+    color: #b8b8b8;
     font-size: 8pt;
     letter-spacing: 1px;
     padding: 25px;
@@ -94,7 +94,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #024d92;
     text-decoration: none;
 }
 
@@ -114,11 +114,11 @@ nav h1 a {
     display: inline-block;
     width: 100%;
     padding: 1em;
-    background-color: #3397DB;
+    background-color: #409dde;
     align-items: center;
 }
 .filter-options h3 {
-    color: white;
+    color: #000;
     font-size: 1rem;
     font-weight: normal;
     line-height: 1;
@@ -167,7 +167,7 @@ nav h1 a {
     padding: 0 30px 25px;
 }
 #restaurants-list li h2 {
-    color: #f18200;
+    color: #8a4500;
     font-size: 14pt;
     font-weight: 200;
     letter-spacing: 0;
@@ -182,7 +182,7 @@ nav h1 a {
 #restaurants-list li a {
     background-color: orange;
     border-bottom: 3px solid #eee;
-    color: #fff;
+    color: #000;
     display: inline-block;
     font-size: 10pt;
     margin: 15px 0 0;
@@ -228,7 +228,7 @@ nav h1 a {
     width: 100%;
 }
 #restaurant-name {
-    color: #f18200;
+    color: #8a4500;
     font-family: Arial,sans-serif;
     font-size: 20pt;
     font-weight: 200;
@@ -266,7 +266,7 @@ nav h1 a {
     padding: 30px 20px 80px;
 }
 #reviews-container h2 {
-    color: #f58500;
+    color: #8a4500;
     font-size: 24pt;
     font-weight: 300;
     letter-spacing: -1px;
